# bodies

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp  platform.window.ixx
code/: CMakeLists.txt  application.c  application.h  core.log.h  error.h  image.c  image.h  log.c  log.h  main.c  main.cpp  memory.c  memory.h  platform.c  platform.cpp  platform.h  platform.ixx  platform.window.c  platform.window.cpp  platform.window.h  platform.window.ixx  window.c  window.h
data/: material.frag.hlsl  material.vert.hlsl  swapchain.frag.hlsl  swapchain.vert.hlsl
scripts/: build_dependencies.bat  build_dependencies.ps1  build_vendor.bat  build_vendor.ps1
